--- a/about-us.html
+++ b/about-us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="en">
   <head>
-    <title>About Us</title>
+    <title>关于我们</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -46,10 +46,10 @@
               <div class="rd-navbar-aside">
                 <div class="rd-navbar-collapse">
                   <ul class="contacts-classic">
-                    <li><span class="contacts-classic-title">Call us:</span> <a class="link" href="tel:#">15850146923</a>
+                    <li><span class="contacts-classic-title">联系我们:</span> <a class="link" href="tel:#">15850146923</a>
                     </li>
                     <li><a href="mailto:#">1943966506@qq.com</a></li>
-                  </ul><a class="rd-navbar-basket rd-navbar-basket-mobile fl-bigmug-line-shopping202" href="#"><span>2</span></a>
+                  <!-- </ul><a class="rd-navbar-basket rd-navbar-basket-mobile fl-bigmug-line-shopping202" href="#"><span>2</span></a> -->
                 </div>
                 <!-- RD Navbar Panel-->
                 <div class="rd-navbar-panel">
@@ -96,7 +96,7 @@
                     <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">首页</a>
                     </li>
                     <!-- <li class="rd-nav-item"><a class="rd-nav-link" href="#">产品中心</a> -->
-					<li class="rd-nav-item"><a class="rd-nav-link" href="what-we-offer.html">产品中心</a>
+					<li class="rd-nav-item"><a class="rd-nav-link" href="shop.html">产品中心</a>
                       <!-- <ul class="rd-menu rd-navbar-dropdown"> -->
                         <!-- <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="about-us.html">About Us</a> -->
                         <!-- </li> -->
@@ -116,7 +116,7 @@
                         <!-- </li> -->
                       <!-- </ul> -->
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">关于我们</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="#">关于我们</a>
                       <!-- <ul class="rd-menu rd-navbar-dropdown"> -->
                         <!-- <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="blog-post.html">Blog Post</a> -->
                         <!-- </li> -->
@@ -201,23 +201,23 @@
               <div class="slick-slider-1 inset-xl-left-35">
                 <!-- Slick Carousel-->
                 <div class="slick-slider carousel-parent slick-nav-1 slick-nav-2" id="carousel-parent" data-items="1" data-autoplay="true" data-slide-effect="true" data-child="#child-carousel" data-for="#child-carousel" data-arrows="true">
-                  <div class="item"><img src="images/about-1-634x373.jpg" alt="" width="634" height="373"/>
+                  <div class="item"><img src="images/goods/about_1_634_373.jpg" alt="" width="634" height="373"/>
                   </div>
-                  <div class="item"><img src="images/about-2-634x373.jpg" alt="" width="634" height="373"/>
+                  <div class="item"><img src="images/goods/about_3_634_373.jpg" alt="" width="634" height="373"/>
                   </div>
-                  <div class="item"><img src="images/about-3-634x373.jpg" alt="" width="634" height="373"/>
+                  <div class="item"><img src="images/goods/about_4_634_373.jpg" alt="" width="634" height="373"/>
                   </div>
-                  <div class="item"><img src="images/about-4-634x373.jpg" alt="" width="634" height="373"/>
+                  <div class="item"><img src="images/goods/about_2_634_373.jpg" alt="" width="634" height="373"/>
                   </div>
                 </div>
                 <div class="slick-slider child-carousel" id="child-carousel" data-items="3" data-sm-items="4" data-md-items="4" data-lg-items="4" data-xl-items="4" data-xxl-items="4" data-for="#carousel-parent">
-                  <div class="item"><img src="images/about-1-143x114.jpg" alt="" width="143" height="114"/>
+                  <div class="item"><img src="images/goods/about_1_143_114.jpg" alt="" width="143" height="114"/>
                   </div>
-                  <div class="item"><img src="images/about-2-143x114.jpg" alt="" width="143" height="114"/>
+                  <div class="item"><img src="images/goods/about_3_143_114.jpg" alt="" width="143" height="114"/>
                   </div>
-                  <div class="item"><img src="images/about-3-143x114.jpg" alt="" width="143" height="114"/>
+                  <div class="item"><img src="images/goods/about_4_143_114.jpg" alt="" width="143" height="114"/>
                   </div>
-                  <div class="item"><img src="images/about-4-143x114.jpg" alt="" width="143" height="114"/>
+                  <div class="item"><img src="images/goods/about_2_143_114.jpg" alt="" width="143" height="114"/>
                   </div>
                 </div>
               </div>
