--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="en">
   <head>
-    <title>Home</title>
+    <title>苏州千旭精密制造有限公司</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -46,10 +46,10 @@
               <div class="rd-navbar-aside">
                 <div class="rd-navbar-collapse">
                   <ul class="contacts-classic">
-                    <li><span class="contacts-classic-title">Call us:</span> <a class="link" href="tel:#">15850146923</a>
+                    <li><span class="contacts-classic-title">联系我们:</span> <a class="link" href="tel:#">15850146923</a>
                     </li>
                     <li><a href="mailto:#">1943966506@qq.com</a></li>
-                  </ul><a class="rd-navbar-basket rd-navbar-basket-mobile fl-bigmug-line-shopping202" href="#"><span>2</span></a>
+                  <!-- </ul><a class="rd-navbar-basket rd-navbar-basket-mobile fl-bigmug-line-shopping202" href="#"><span>2</span></a> -->
                 </div>
                 <!-- RD Navbar Panel-->
                 <div class="rd-navbar-panel">
@@ -93,10 +93,10 @@
               <div class="rd-navbar-main">
                 <div class="rd-navbar-nav-wrap">
                   <ul class="rd-navbar-nav">
-                    <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">首页</a>
+                    <li class="rd-nav-item active"><a class="rd-nav-link" href="#">首页</a>
                     </li>
                     <!-- <li class="rd-nav-item"><a class="rd-nav-link" href="#">产品中心</a> -->
-					<li class="rd-nav-item"><a class="rd-nav-link" href="what-we-offer.html">产品中心</a>
+					<li class="rd-nav-item"><a class="rd-nav-link" href="shop.html">产品中心</a>
                       <!-- <ul class="rd-menu rd-navbar-dropdown"> -->
                         <!-- <li class="rd-dropdown-item"><a class="rd-dropdown-link" href="about-us.html">About Us</a> -->
                         <!-- </li> -->
@@ -158,7 +158,7 @@
               </div>
             </div>
           </div>
-          <div class="swiper-slide swiper-slide-2" data-slide-bg="images/baner_2.jpg">
+          <div class="swiper-slide swiper-slide-2" data-slide-bg="images/baner_1.jpg">
             <div class="swiper-slide-caption section-md text-center">
               <div class="container">
                 <h2 class="swiper-title-1" data-caption-animate="fadeInLeft" data-caption-delay="100">权威CE认证</h2>
@@ -675,19 +675,19 @@
                 <div class="slick-quote-nav">
                   <div class="slick-slider child-carousel" id="child-carousel" data-arrows="true" data-for="#carousel-parent" data-items="1" data-sm-items="1" data-md-items="3" data-lg-items="3" data-xl-items="3" data-xxl-items="3">
                     <div class="item">
-                      <div class="quote-minimal-figure"><img src="images/goods/2.png" alt="" width="87" height="87"/>
+                      <div class="quote-minimal-figure"><img src="images/goods/gunzhu_87_87.jpg" alt="" width="87" height="87"/>
                       </div>
                       <div class="quote-minimal-author">滚珠型吊环</div>
                       <!-- <div class="quote-minimal-status">Client</div> -->
                     </div>
                     <div class="item">
-                      <div class="quote-minimal-figure"><img src="images/goods/1.png" alt="" width="87" height="87"/>
+                      <div class="quote-minimal-figure"><img src="images/goods/cela_87_87.jpg" alt="" width="87" height="87"/>
                       </div>
                       <div class="quote-minimal-author">侧拉型吊环</div>
                       <!-- <div class="quote-minimal-status">Client</div> -->
                     </div>
                     <div class="item">
-                      <div class="quote-minimal-figure"><img src="images/goods/2.png" alt="" width="87" height="87"/>
+                      <div class="quote-minimal-figure"><img src="images/goods/xiekou_87_87.jpg" alt="" width="87" height="87"/>
                       </div>
                       <div class="quote-minimal-author">卸扣型吊环</div>
                       <!-- <div class="quote-minimal-status">Client</div> -->
@@ -719,7 +719,7 @@
                 <!-- Thumbnail Classic-->
                 <article class="thumbnail-classic block-1">
                   <!-- <div class="thumbnail-classic-figure"><img src="images/masonry-gallery-1-270x250.jpg" alt="" width="270" height="250"/> -->
-                  <div class="thumbnail-classic-figure"><img src="images/masonry-gallery-1-270x250.jpg" alt="" width="270" height="250"/>
+                  <div class="thumbnail-classic-figure"><img src="images/goods/11_270_250.jpg" alt="" width="270" height="250"/>
                   </div>
                   <div class="thumbnail-classic-caption">
                     <div>
@@ -729,10 +729,10 @@
                   </div>
                 </article>
               </div>
-              <div class="col-sm-6 col-lg-4 col-xl-3 isotope-item" data-filter="Type 2">
+              <div class="col-sm-6 col-lg-4 col-xl-3 isotope-item" data-filter="Type 1">
                 <!-- Thumbnail Classic-->
                 <article class="thumbnail-classic block-1">
-                  <div class="thumbnail-classic-figure"><img src="images/masonry-gallery-2-270x530.jpg" alt="" width="270" height="530"/>
+                  <div class="thumbnail-classic-figure"><img src="images/goods/15_270_530.jpg" alt="" width="270" height="530"/>
                   </div>
                   <div class="thumbnail-classic-caption">
                     <div>
@@ -745,7 +745,7 @@
               <div class="col-sm-6 col-lg-4 col-xl-3 isotope-item" data-filter="Type 1">
                 <!-- Thumbnail Classic-->
                 <article class="thumbnail-classic block-1">
-                  <div class="thumbnail-classic-figure"><img src="images/masonry-gallery-3-270x250.jpg" alt="" width="270" height="250"/>
+                  <div class="thumbnail-classic-figure"><img src="images/goods/12_270_250.jpg" alt="" width="270" height="250"/>
                   </div>
                   <div class="thumbnail-classic-caption">
                     <div>
@@ -755,23 +755,10 @@
                   </div>
                 </article>
               </div>
-              <div class="col-sm-6 col-lg-4 col-xl-3 isotope-item" data-filter="Type 2">
-                <!-- Thumbnail Classic-->
-                <article class="thumbnail-classic block-1">
-                  <div class="thumbnail-classic-figure"><img src="images/masonry-gallery-4-270x250.jpg" alt="" width="270" height="250"/>
-                  </div>
-                  <div class="thumbnail-classic-caption">
-                    <div>
-                      <h5 class="thumbnail-classic-title">苏州千旭精密制造有限公司</h5>
-                      
-                    </div>
-                  </div>
-                </article>
-              </div>
               <div class="col-sm-6 col-lg-4 col-xl-3 isotope-item" data-filter="Type 1">
                 <!-- Thumbnail Classic-->
                 <article class="thumbnail-classic block-1">
-                  <div class="thumbnail-classic-figure"><img src="images/masonry-gallery-5-270x250.jpg" alt="" width="270" height="250"/>
+                  <div class="thumbnail-classic-figure"><img src="images/goods/13_270_250.jpg" alt="" width="270" height="250"/>
                   </div>
                   <div class="thumbnail-classic-caption">
                     <div>
@@ -781,10 +768,10 @@
                   </div>
                 </article>
               </div>
-              <div class="col-sm-6 col-lg-4 col-xl-6 isotope-item" data-filter="Type 2">
+              <div class="col-sm-6 col-lg-4 col-xl-3 isotope-item" data-filter="Type 0">
                 <!-- Thumbnail Classic-->
                 <article class="thumbnail-classic block-1">
-                  <div class="thumbnail-classic-figure"><img src="images/masonry-gallery-6-570x530.jpg" alt="" width="570" height="530"/>
+                  <div class="thumbnail-classic-figure"><img src="images/goods/14_270_250.jpg" alt="" width="270" height="250"/>
                   </div>
                   <div class="thumbnail-classic-caption">
                     <div>
@@ -794,10 +781,23 @@
                   </div>
                 </article>
               </div>
-              <div class="col-sm-6 col-lg-8 col-xl-6 isotope-item" data-filter="Type 2">
+              <div class="col-sm-6 col-lg-4 col-xl-6 isotope-item" data-filter="Type 1">
                 <!-- Thumbnail Classic-->
                 <article class="thumbnail-classic block-1">
-                  <div class="thumbnail-classic-figure"><img src="images/masonry-gallery-7-570x250.jpg" alt="" width="570" height="250"/>
+                  <div class="thumbnail-classic-figure"><img src="images/goods/16_570_530.jpg" alt="" width="570" height="530"/>
+                  </div>
+                  <div class="thumbnail-classic-caption">
+                    <div>
+                      <h5 class="thumbnail-classic-title">苏州千旭精密制造有限公司</h5>
+                      
+                    </div>
+                  </div>
+                </article>
+              </div>
+              <div class="col-sm-6 col-lg-8 col-xl-6 isotope-item" data-filter="Type 1">
+                <!-- Thumbnail Classic-->
+                <article class="thumbnail-classic block-1">
+                  <div class="thumbnail-classic-figure"><img src="images/goods/17_570_250.jpg" alt="" width="570" height="250"/>
                   </div>
                   <div class="thumbnail-classic-caption">
                     <div>
