新增其他详情页，导航字体调大

--- a/cela-product.html
+++ b/cela-product.html
@@ -92,11 +92,11 @@
             </div>
             <div class="col-md-6 col-lg-7">
               <h2>侧拉吊环</h2>
-              <p>适用于起重，耐用可靠。此处为产品简要说明，具体内容可自行修改。</p>
+              <p>适用于起重，耐用可靠。</p>
               <ul class="list-marked">
                 <li>材质：合金钢</li>
-                <li>颜色：银灰，定制</li>
-                <li>承载：最大5T</li>
+                <li>颜色：红色，定制</li>
+                <li>承载：最大20T</li>
                 <li>适用场景：吊装/工业/运输</li>
               </ul>
               <button class="button button-primary">立即咨询</button>
