--- a/luomu-product.html
+++ b/luomu-product.html
@@ -88,10 +88,10 @@
           <div class="row row-50 align-items-center">
             <div class="col-md-6 col-lg-5">
               <!-- 产品大图 -->
-              <img src="images/goods/gzxq_zt.jpg" alt="滚珠吊环" width="380" height="380" style="border-radius:12px;box-shadow:0 4px 24px rgba(0,0,0,0.14)" class="d-block mx-auto">
+              <img src="images/goods/luomu.png" alt="螺母吊环" width="380" height="380" style="border-radius:12px;box-shadow:0 4px 24px rgba(0,0,0,0.14)" class="d-block mx-auto">
             </div>
             <div class="col-md-6 col-lg-7">
-              <h2>滚珠吊环</h2>
+              <h2>螺母吊环</h2>
               <p>适用于起重，耐用可靠。</p>
               <ul class="list-marked">
                 <li>材质：合金钢</li>
