--- a/shop.html
+++ b/shop.html
@@ -132,7 +132,7 @@
                     <div class="product-body">
                       <div class="product-figure"><img src="images/goods/cela.png" alt="" width="180" height="180"/>
                       </div>
-                      <h5 class="product-title"><a href="single-product.html">侧拉吊环</a></h5>
+                      <h5 class="product-title"><a href="cela-product.html">侧拉吊环</a></h5>
                       <div class="product-price-wrap">
                         <div class="product-price">适用于起重</div>
                       </div>
@@ -149,7 +149,7 @@
                     <div class="product-body">
                       <div class="product-figure"><img src="images/goods/yanxing.png" alt="" width="180" height="180"/>
                       </div>
-                      <h5 class="product-title"><a href="single-product.html">眼型吊环</a></h5>
+                      <h5 class="product-title"><a href="yanxing2-product.html">眼型吊环</a></h5>
                       <div class="product-price-wrap">
                         <div class="product-price">适用于起重</div>
                       </div>
@@ -166,7 +166,7 @@
                     <div class="product-body">
                       <div class="product-figure"><img src="images/goods/luomu.png" alt="" width="180" height="180"/>
                       </div>
-                      <h5 class="product-title"><a href="single-product.html">螺母吊环</a></h5>
+                      <h5 class="product-title"><a href="luomu-product.html">螺母吊环</a></h5>
                       <div class="product-price-wrap">
                         <div class="product-price">适用于起重</div>
                       </div>
@@ -183,7 +183,7 @@
                     <div class="product-body">
                       <div class="product-figure"><img src="images/goods/xiekou.png" alt="" width="180" height="180"/>
                       </div>
-                      <h5 class="product-title"><a href="single-product.html">卸扣吊环</a></h5>
+                      <h5 class="product-title"><a href="xiekou-product.html">卸扣吊环</a></h5>
                       <div class="product-price-wrap">
                         <div class="product-price">适用于起重</div>
                       </div>
@@ -200,7 +200,7 @@
                     <div class="product-body">
                       <div class="product-figure"><img src="images/goods/yanxing1.png" alt="" width="180" height="180"/>
                       </div>
-                      <h5 class="product-title"><a href="single-product.html">眼型吊环</a></h5>
+                      <h5 class="product-title"><a href="yanxing1-product.html">眼型吊环</a></h5>
                       <div class="product-price-wrap">
                         <div class="product-price">适用于起重</div>
                       </div>
