--- a/yanxing1-product.html
+++ b/yanxing1-product.html
@@ -88,14 +88,14 @@
           <div class="row row-50 align-items-center">
             <div class="col-md-6 col-lg-5">
               <!-- 产品大图 -->
-              <img src="images/goods/gzxq_zt.jpg" alt="滚珠吊环" width="380" height="380" style="border-radius:12px;box-shadow:0 4px 24px rgba(0,0,0,0.14)" class="d-block mx-auto">
+              <img src="images/goods/yxxq_zt1.png" alt="眼型吊环" width="380" height="380" style="border-radius:12px;box-shadow:0 4px 24px rgba(0,0,0,0.14)" class="d-block mx-auto">
             </div>
             <div class="col-md-6 col-lg-7">
-              <h2>滚珠吊环</h2>
+              <h2>眼型吊环</h2>
               <p>适用于起重，耐用可靠。</p>
               <ul class="list-marked">
                 <li>材质：合金钢</li>
-                <li>颜色：红色，定制</li>
+                <li>颜色：白色，红色，定制</li>
                 <li>承载：最大20T</li>
                 <li>适用场景：吊装/工业/运输</li>
               </ul>
@@ -105,7 +105,7 @@
           <div class="row row-40 mt-5">
             <div class="col-12">
               <h4>产品详情</h4>
-              <img src="images/goods/gzxq.jpg" class="d-block mx-auto"/>
+              <img src="images/goods/yxxq2.jpg" class="d-block mx-auto"/>
             </div>
           </div>
         </div>
