--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <div class="product-body">
                   <div class="product-figure"><img src="images/goods/yanxing.png" alt="" width="180" height="180"/>
                   </div>
-                  <h5 class="product-title"><a href="single-product.html">眼型吊环</a></h5>
+                  <h5 class="product-title"><a href="yanxing2-product.html">眼型吊环</a></h5>
                   <div class="product-price-wrap">
                     <div class="product-price">适用于起重</div>
                   </div>
@@ -176,7 +176,7 @@
                 <div class="product-body">
                   <div class="product-figure"><img src="images/goods/luomu.png" alt="" width="180" height="180"/>
                   </div>
-                  <h5 class="product-title"><a href="single-product.html">螺母吊环</a></h5>
+                  <h5 class="product-title"><a href="luomu-product.html">螺母吊环</a></h5>
                   <div class="product-price-wrap">
                     <div class="product-price">适用于起重</div>
                   </div>
@@ -192,7 +192,7 @@
                 <div class="product-body">
                   <div class="product-figure"><img src="images/goods/xiekou.png" alt="" width="180" height="180"/>
                   </div>
-                  <h5 class="product-title"><a href="single-product.html">卸扣吊环</a></h5>
+                  <h5 class="product-title"><a href="xiekou-product.html">卸扣吊环</a></h5>
                   <div class="product-price-wrap">
                     <div class="product-price">适用于起重</div>
                   </div>
@@ -208,7 +208,7 @@
                 <div class="product-body">
                   <div class="product-figure"><img src="images/goods/yanxing1.png" alt="" width="180" height="180"/>
                   </div>
-                  <h5 class="product-title"><a href="single-product.html">眼型吊环</a></h5>
+                  <h5 class="product-title"><a href="yanxing1-product.html">眼型吊环</a></h5>
                   <div class="product-price-wrap">
                     <div class="product-price">适用于起重</div>
                   </div>
