产品详情更新

--- a/yanxing1-product.html
+++ b/yanxing1-product.html
@@ -105,7 +105,7 @@
           <div class="row row-40 mt-5">
             <div class="col-12">
               <h4>产品详情</h4>
-              <img src="images/goods/yxxq2.jpg" class="d-block mx-auto"/>
+              <img src="images/goods/yxxq.jpg" class="d-block mx-auto"/>
             </div>
           </div>
         </div>
