--- a/index.html
+++ b/index.html
@@ -110,6 +110,16 @@
               </div>
             </div>
           </div>
+          <div class="swiper-slide swiper-slide-2" data-slide-bg="images/baner_3.jpg">
+            <div class="swiper-slide-caption section-md text-center">
+              <div class="container">
+                <h2 class="swiper-title-1" data-caption-animate="fadeInLeft" data-caption-delay="100">权威CE认证</h2>
+                <h5 class="swiper-title-2" data-caption-animate="fadeInRight" data-caption-delay="250">Authoritative CE Certification
+<br class="d-none d-md-block">严控品质通过多项认证，为起吊安全保驾护航.
+                </h5>
+              </div>
+            </div>
+          </div>
         </div>
         <!-- Swiper Pagination-->
         <div class="swiper-pagination"></div>
@@ -134,7 +144,7 @@
                   </div>
                 </div><span class="product-badge product-badge-sale">Sale</span>
                 <div class="product-button-wrap">
-                  <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="single-product.html"></a></div>
+                  <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="gunzhu-product.html"></a></div>
                 </div>
               </article>
             </div>
@@ -150,7 +160,7 @@
                   </div>
                 </div><span class="product-badge product-badge-new">New</span>
                 <div class="product-button-wrap">
-                  <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="single-product.html"></a></div>
+                  <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="cela-product.html"></a></div>
                 </div>
               </article>
             </div>
@@ -166,7 +176,7 @@
                   </div>
                 </div>
                 <div class="product-button-wrap">
-                  <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="single-product.html"></a></div>
+                  <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="yanxing2-product.html"></a></div>
                 </div>
               </article>
             </div>
@@ -182,7 +192,7 @@
                   </div>
                 </div><span class="product-badge product-badge-new">New</span>
                 <div class="product-button-wrap">
-                  <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="single-product.html"></a></div>
+                  <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="luomu-product.html"></a></div>
                 </div>
               </article>
             </div>
@@ -198,7 +208,7 @@
                   </div>
                 </div><span class="product-badge product-badge-new">New</span>
                 <div class="product-button-wrap">
-                  <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="single-product.html"></a></div>
+                  <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="xiekou-product.html"></a></div>
                 </div>
               </article>
             </div>
@@ -214,7 +224,7 @@
                   </div>
                 </div>
                 <div class="product-button-wrap">
-                  <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="single-product.html"></a></div>
+                  <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="yanxing1-product.html"></a></div>
                 </div>
               </article>
             </div>
