--- a/luomu-product.html
+++ b/luomu-product.html
@@ -105,7 +105,11 @@
           <div class="row row-40 mt-5">
             <div class="col-12">
               <h4>产品详情</h4>
-              <img src="images/goods/gzxq.jpg" class="d-block mx-auto"/>
+              <h5>L型</h5>
+              <img src="images/goods/lmxq-l.jpg" class="d-block mx-auto"/>
+              <h5>M型</h5>
+              <img src="images/goods/lmxq-m.jpg" class="d-block mx-auto"/>
+              
             </div>
           </div>
         </div>
