--- a/shop.html
+++ b/shop.html
@@ -121,8 +121,7 @@
                       </div>
                     </div><span class="product-badge product-badge-sale">Sale</span>
                     <div class="product-button-wrap">
-                      <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="single-product.html"></a></div>
-                      <div class="product-button"><a class="button button-primary button-zakaria fl-bigmug-line-shopping202" href="#"></a></div>
+                      <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="gunzhu-product.html"></a></div>
                     </div>
                   </article>
                 </div>
@@ -138,8 +137,7 @@
                       </div>
                     </div><span class="product-badge product-badge-new">New</span>
                     <div class="product-button-wrap">
-                      <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="single-product.html"></a></div>
-                      <div class="product-button"><a class="button button-primary button-zakaria fl-bigmug-line-shopping202" href="#"></a></div>
+                      <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="cela-product.html"></a></div>
                     </div>
                   </article>
                 </div>
@@ -155,8 +153,7 @@
                       </div>
                     </div>
                     <div class="product-button-wrap">
-                      <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="single-product.html"></a></div>
-                      <div class="product-button"><a class="button button-primary button-zakaria fl-bigmug-line-shopping202" href="#"></a></div>
+                      <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="yanxing2-product.html"></a></div>
                     </div>
                   </article>
                 </div>
@@ -172,8 +169,7 @@
                       </div>
                     </div><span class="product-badge product-badge-new">New</span>
                     <div class="product-button-wrap">
-                      <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="single-product.html"></a></div>
-                      <div class="product-button"><a class="button button-primary button-zakaria fl-bigmug-line-shopping202" href="#"></a></div>
+                      <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="luomu-product.html"></a></div>
                     </div>
                   </article>
                 </div>
@@ -189,8 +185,7 @@
                       </div>
                     </div>
                     <div class="product-button-wrap">
-                      <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="single-product.html"></a></div>
-                      <div class="product-button"><a class="button button-primary button-zakaria fl-bigmug-line-shopping202" href="#"></a></div>
+                      <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="xiekou-product.html"></a></div>
                     </div>
                   </article>
                 </div>
@@ -206,8 +201,7 @@
                       </div>
                     </div><span class="product-badge product-badge-sale">Sale</span>
                     <div class="product-button-wrap">
-                      <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="single-product.html"></a></div>
-                      <div class="product-button"><a class="button button-primary button-zakaria fl-bigmug-line-shopping202" href="#"></a></div>
+                      <div class="product-button"><a class="button button-secondary button-zakaria fl-bigmug-line-search74" href="yanxing1-product.html"></a></div>
                     </div>
                   </article>
                 </div>
